Fix build with Qt 5.9.1 and clang

Summary:
Qt 5.9.1 expands Q_REQUIRED_RESULT to the `[[nodiscard]]` attribute
(see commit d254d8c19 in qtbase). This breaks the build with clang
compilers because `[[nodiscard]]` cannot be used at the end of a function
declaration:

```
error: 'nodiscard' attribute cannot be applied to types
```

For the record, GCC just issues a 'attribute ignored' warning when
`[[nodiscard]]` is used at the end of a declaration

BUG: 382135
FIXED-IN: 5.1.2